--- a/07cu/css/style.css
+++ b/07cu/css/style.css
@@ -81,15 +81,43 @@
 /* visual   */
 .visualWrap{
     height: 100vh;
-    background-image: url(../images/header_slide01.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
+.sliderWrap{margin: 0 auto;}
+.swiper{width: 100%;height: 100%;}
+.swiper-slide{position: relative; margin: 0 auto;}
+
+
+.swiper-slide .text{position: absolute;text-align: center;padding: 220px 643px;}
+.swiper-slide .text h1{color: #fff;font-size: 94px; line-height: 1.5;}
+.swiper-slide .text h3{color: #fff;font-size: 16px;line-height: 2}
+
+.swiper-button-next{
+    background: url(../images/header_next.png) no-repeat;margin-right: 30px;
+    transform: scale(3); background-size: 100%;
+}
+
+.swiper-button-prev{
+    background: url(../images/header_prev.png) no-repeat;margin-left: 30px;
+    transform: scale(3); background-size: 100%;
+}
+
+
+.swiper-button-next:after,.swiper-button-prev::after{
+    display: none;
+}
+
+.swiper-pagination{top: 540px; }
+.swiper-active{background: rgb(255, 39, 39);}
+
+
+
 /* contents  */
 .contents{margin-top: -310px;}
-.contents>ul{display: flex;flex-wrap:wrap;position: relative;}
+.contents>ul{display: flex;flex-wrap:wrap;position: relative;z-index: 10;}
 .contents>ul>li{
     flex-grow:1;
     flex-basis: 25%;
