--- a/07cu/css/style.css
+++ b/07cu/css/style.css
@@ -180,6 +180,36 @@
 .contents>ul>li:nth-child(9){background: #6837f8;}
 .contents>ul>li:nth-child(10){background: #313842;}
 
+
+.contents>ul>li:nth-child(1) img,
+.contents>ul>li:nth-child(4) img,
+.contents>ul>li:nth-child(5) img,
+.contents>ul>li:nth-child(9) img,
+.contents>ul>li:nth-child(10) img
+{
+    transition:0.3s
+}
+
+.contents>ul>li:nth-child(1):hover  img,
+.contents>ul>li:nth-child(4):hover  img,
+.contents>ul>li:nth-child(5):hover  img,
+.contents>ul>li:nth-child(9):hover  img,
+.contents>ul>li:nth-child(10):hover  img
+{
+    transform: scale(1.1); cursor: pointer;
+}
+
+.contents>ul>li:nth-child(1) h3{color: #1d1829; text-align: center;  }
+
+.contents>ul>li:nth-child(4) h3,
+.contents>ul>li:nth-child(5) h3,
+.contents>ul>li:nth-child(9) h3,
+.contents>ul>li:nth-child(10) h3{
+    color: #ffffff; text-align: center; 
+}
+
+
+
 .contents>ul>li:nth-child(2){
     background: url(../images/sec1_video.jpg) no-repeat center;
     display: flex;justify-content: center;align-items: center;
@@ -187,6 +217,8 @@
 .contents>ul>li:nth-child(2) img{
     transition:0.3s
 }
+
+
 .contents>ul>li:nth-child(2):hover img{
     transform: scale(1.2); cursor: pointer;
 }
@@ -246,6 +278,18 @@
 
 
 
+.storyWrpa{display: flex;justify-content: center;
+        align-items: center;}
+
+.storyWrpa .bg{ position: relative; padding: 400px 0;}
+.sliderWrap .icon ul{}
+.storyWrpa .icon {position:absolute; }
+.storyWrpa .icon li{ float: left;width: calc(100% / 4);padding: 0 60px; } 
+.storyWrpa .icon img{}
+.storyWrpa .text{text-align: center; color: #fff; }
+.storyWrpa .text h3{font-size: 20px;}
+
+.storyWrpa .text h4{font-size: 14px; }
 /********** css responsive  **********/
 
 
@@ -270,17 +314,16 @@
     .contents>ul>li:nth-child(4),
     .contents>ul>li:nth-child(5),
     .contents>ul>li:nth-child(9){
-     height: initial;padding:20px
+        height: 200px;
     }
     .contents>ul>li:nth-child(1) img,
     .contents>ul>li:nth-child(4) img,
     .contents>ul>li:nth-child(5) img,
     .contents>ul>li:nth-child(9) img{
-        width: 100%;
+        
     }
 
     
-
 
     
 
@@ -322,7 +365,7 @@
     .navbarClone{
         position: fixed;
         width:90%;
-        height: 100%;
+        -height: 100%;
         top: 0;left: -100%;
         background: #37d243;
         display: block;
@@ -357,7 +400,7 @@
     .swiper-slide .text h3{color: #fff;font-size: 16px;line-height: 2}
     .swiper-button-next,.swiper-button-prev{display: none!important;}
 
-    .contents>ul>li:nth-child(12){display: block; width:400px}
+    .contents>ul>li:nth-child(12){display: block; }
   
     .contents>ul>li:nth-child(6),
     .contents>ul>li:nth-child(8), 
