--- a/07cu/css/style.css
+++ b/07cu/css/style.css
@@ -339,9 +339,18 @@
 .bx-pager-link{display: none;}
 
 
+.advertisingWrap{margin: 0 auto; width: 100%; display: flex;padding: 90px 0 0; }
+.sec4_contents01 img,
+.sec4_contents02 img{ cursor: pointer;}
+
+   
+/* footer */
+
+.footerWrap{background: #f0f0f0; display: flex; 
+    justify-content: center;  align-items: center; }
 
 
-
+.footerR{display: flex;}
 
 
 /********** css responsive  **********/
