--- a/07cu/css/style.css
+++ b/07cu/css/style.css
@@ -3,7 +3,7 @@
 .container{width: 1240px;margin: 0 auto}
 
 /* header  */
-#header{position:fixed;width: 100%;z-index:100 ;}
+#header{position:fixed;width: 100%;z-index:100 ; margin: 0 auto;}
 
 #header.fixed{
     position: fixed;
@@ -278,7 +278,7 @@
 
 
 
-.contentscontainerstory{}
+.contentscontainerstory{margin: 0 auto;}
 .storyWrap{background-attachment: fixed;  height: 75vh;  position: relative;
     background-image: url(../images/sec2_contents.jpg); 
     background-size:contain; width: 99vw; display: flex;align-items: center;
