--- a/09bootstrap/css/style.css
+++ b/09bootstrap/css/style.css
@@ -1,6 +1,5 @@
 @charset "utf-8";
 
-html,body{background: linear-gradient(#062031, rgb(0, 0, 0)) no-repeat; ;}
 
 :root{
     --font-color1:#333;
@@ -12,14 +11,15 @@ a:link,a:visited{text-decoration: none;color:var(--font-color1)}
 ul,li{list-style: none;margin: 0;padding: 0;}
 
 
-
-.navbar-toggler{border: 0 none}
+.navbar-toggler{border: 0 none; background:#5cdb76}
 .navbar .bg-color{
     position: absolute;
-    width: 100%;height: 900px;
-    background-image: url(../images/buyeo1.jpg);
-   
+    width:1200px;height: 900px;
+    background-image: url(../images/jobda2.png); 
 }
+
+
+
 
 .video video{
     object-fit: fill;width: 100%;
@@ -36,6 +36,8 @@ ul,li{list-style: none;margin: 0;padding: 0;}
     border: 0 none;
 }
 
+.banner {background-color:#5cdb76;}
+
 .adven .img1st{top: 0;right: 0;box-shadow:var(--shadow-color2);}
 .adven .img2st{bottom: 0;box-shadow:var(--shadow-color2);}
 .adven .img4st{top: 0;right: 0;box-shadow:var(--shadow-color2);width: 300px;}
@@ -50,7 +52,7 @@ ul,li{list-style: none;margin: 0;padding: 0;}
 }
 
 .contact{
-    background: url(../images/contact-cover.jpg) no-repeat center;
+    background: url(../images/jobda16.png) no-repeat center;
     background-size: cover;
     background-attachment: fixed;
 }
